--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ body
 <p>I am making creative and experimental game prototypes! Here is the list of them:
 
 <ol>
-https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/
+Digital Game 0: https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/
+Digital Game 1: https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/
 </ol>
 
 </body>
