--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body
 <ol>
 Digital Game 0: https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/
 Digital Game 1: https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/
+Digital Game 1B: https://microstudio.io/jnguye78/digitalgame1/Z2MHSF8U/
 </ol>
 
 </body>
