--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 Digital Game 0: https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/
 Digital Game 1: https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/
 Digital Game 1B: https://microstudio.io/jnguye78/digitalgame1/Z2MHSF8U/
+Digital Game 2: https://microstudio.io/samrparker12/digitalgame2/ZVRAU7W8/
 </ol>
 
 </body>
