--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ Digital Game 1: https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/
 Digital Game 1B: https://microstudio.io/jnguye78/digitalgame1/Z2MHSF8U/
 Digital Game 2: https://microstudio.io/samrparker12/digitalgame2/ZVRAU7W8/
 </ol>
+<ol>
+<li><a href="https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/">Digital Game 0</a></li>
+<li><a href="https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/">Digital Game 1A</a></li>
+<li><a href="https://microstudio.io/jnguye78/digitalgame1/Z2MHSF8U/">Digital Game 1B</a></li>
+<li><a href="https://microstudio.io/samrparker12/digitalgame2/ZVRAU7W8/">Digital Game 2A</a></li>
+<li><a href="https://microstudio.dev/i/samrparker12/digitalgame22/">Digital Game 2B</a></li>
+</ol>
 
 </body>
 </html>
