--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@ body
 
 <h1>CS 325 Game Prototypes</h1>
 
-<p>I am making creative and experimental game prototypes! Here is the list of them:
+<p>I am making creative and experimental game prototypes! Here is the list of them:</p>
 
-<ol>
-Digital Game 0: https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/
-Digital Game 1: https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/
-Digital Game 1B: https://microstudio.io/jnguye78/digitalgame1/Z2MHSF8U/
-Digital Game 2: https://microstudio.io/samrparker12/digitalgame2/ZVRAU7W8/
-</ol>
+    
 <ol>
 <li><a href="https://microstudio.io/TylerC/tutorialcreateagame/GWYAZ4E4/">Digital Game 0</a></li>
 <li><a href="https://microstudio.io/TylerC/digitalgame1/8YAUHPDN/">Digital Game 1A</a></li>
