--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body
 <li><a href="https://microstudio.io/jnguye78/digitalgame1/Z2MHSF8U/">Digital Game 1B</a></li>
 <li><a href="https://microstudio.io/samrparker12/digitalgame2/ZVRAU7W8/">Digital Game 2A</a></li>
 <li><a href="https://microstudio.dev/i/samrparker12/digitalgame22/">Digital Game 2B</a></li>
+<li><a href = "https://microstudio.dev/i/TylerC/digitalgame3a/">Digital Game 2B</a></li>
 </ol>
 
 </body>
