--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ body
 <li><a href = "https://microstudio.dev/i/TylerC/digitalgame3a/">Digital Game 3A</a></li>
 <li><a href = "https://microstudio.dev/i/TylerC/digitalgame3a2/"> Digital Game 3B</a></li>
 <li><a href = "https://microstudio.dev/i/BEmmett/project4a/"> Digital Game 4A</a></li>
+<li><a href = "https://microstudio.dev/i/TylerC/project4a/"> Digital Game 4B</a></li>
 </ol>
 
 </body>
